getopts module complete (?). getopts.tex API documentation done; autodoc of functions is ok; test driver written & passes.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@20 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -36,6 +36,12 @@
 \input{autotext/dmatrix_functions}
 
 \newpage
+\section{The getopts (opt) module: command line option parsing and more}
+\input{../getopts}
+\subsection{Functions in the getopts module}
+\input{autotext/getopts_functions}
+
+\newpage
 \section{The random (rnd) module: pseudorandom numbers and basic sampling}
 \input{../random}
 \subsection{Functions in the random (rnd) module}
