--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -6,6 +6,7 @@ easel                      & Framework for using Easel                  &  - \\
 alphabet                   & Digitized biosequence alphabets            & easel\\
 dmatrix                    & Matrix algebra                             & easel\\ 
 getopts                    & Command line parsing \& application config & easel\\
+msa                        & Multiple sequence alignment i/o            & easel\\
 parse                      & File and line parsing routines             & easel\\
 random                     & Random number generator                    & easel\\
 regexp                     & Regular expression matching                & easel\\
@@ -30,9 +31,11 @@ interface\_lapack          & LAPACK linear algebra library              & easel 
 \textbf{Object}          & \textbf{Implemented in} & \textbf{Description}\\\hline
 \ccode{ESL\_ALPHABET}    & \cfile{alphabet}        & Digitized sequence alphabet\\
 \ccode{ESL\_DMATRIX}     & \cfile{dmatrix}         & 2D double-precision matrix for linear algebra \\
-\ccode{ESL\_GETOPTS}     & \cfile{getopts}         & Application configuration state\\
-\ccode{ESL\_PERMUTATION} & \cfile{dmatrix}         & Permutation matrix used in linear algebra\\
 \ccode{ESL\_FILEPARSER}  & \cfile{parse}           & Simple token-based input file parser\\
+\ccode{ESL\_GETOPTS}     & \cfile{getopts}         & Application configuration state\\
+\ccode{ESL\_MSA}         & \cfile{msa}             & Multiple sequence alignment\\
+\ccode{ESL\_MSAFILE}     & \cfile{msa}             & Multiple sequence alignment file parser\\
+\ccode{ESL\_PERMUTATION} & \cfile{dmatrix}         & Permutation matrix used in linear algebra\\
 \ccode{ESL\_RANDOMNESS}  & \cfile{random}          & Random number generator\\
 \ccode{ESL\_REGEXP}      & \cfile{regexp}          & Regular expression pattern-matching machine\\
 \ccode{ESL\_SEQFILE}     & \cfile{sqio}            & Biosequence file parser (unaligned)\\
