--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -42,6 +42,18 @@
 \input{autotext/getopts_functions}
 
 \newpage
+\section{The keyhash (key) module: keyword hashing, associative array emulation}
+\input{../keyhash}
+\subsection{Functions in the keyhash module}
+\input{autotext/keyhash_functions}
+
+\newpage
+\section{The msa module: multiple sequence alignment i/o}
+\input{../msa}
+\subsection{Functions in the msa module}
+\input{autotext/msa_functions}
+
+\newpage
 \section{The random (rnd) module: pseudorandom numbers and basic sampling}
 \input{../random}
 \subsection{Functions in the random (rnd) module}
